--- a/net/vsftpd/files/vsftpd.conf
+++ b/net/vsftpd/files/vsftpd.conf
@@ -8,7 +8,6 @@ check_shell=NO
 #dirmessage_enable=YES
 #ftpd_banner=Welcome to blah FTP service.
 session_support=NO
-idle_session_timeout=9600
 #syslog_enable=YES
 #userlist_enable=YES
 #userlist_deny=NO
@@ -28,4 +27,6 @@ idle_session_timeout=9600
 #ssl_sslv3=NO
 #rsa_cert_file=/etc/config/vsftpd_cert.pem
 #rsa_private_key_file=/etc/config/vsftpd_privkey.pem
+local_root=/
+idle_session_timeout=9600
 
